# Capnp_Local

./: .gitignore  CMakeLists.txt  README.md  main.cpp  start.txt
capnp/: CMakeLists.txt  example.capnp  example.capnp.c++  example.capnp.h  json2txt.py  sample.capnp  sample.json  start.txt
capnp/example/: CMakeLists.txt  start.txt  test.capnp
capnproto-c++-1.2.0/: configure
package/OpenSSL-Win64/exp/: dasync.exp  libssl.exp  openssl.exp  ossltest.exp
package/OpenSSL-Win64/lib/VC/x64/MD/: libapps.lib  libcommon.lib  libtemplate.lib
package/OpenSSL-Win64/tests/: evp_extra_test2.exp  p_minimal.exp  p_test.exp
package/zlib-1.3.1/share/pkgconfig/: zlib.pc
